Version 1.0     13 Feb 2002
    First public release.
    Split from the pybsl application (see mspgcc.sourceforge.net)
    
    New Features:
        - Added Jython support
    
Version 1.1     14 Feb 2002
    Bugfixes:
        - Win32, when not specifying a timeout
        - Typos in the Docs
        
    New Features:
        - added serialutil which provides a base class for the Serial objects.
        
        - readline, readlines, writelines and flush are now supported
          see README.txt for deatils.

Version 1.11    14 Feb 2002
    Same as 1.1 but added missing files.

Version 1.12    18 Feb 2002
    Removed unneded constants to fix RH7.x problems.

Version 1.13    09 Apr 2002
    Added alternate way for enabling rtscts (CNEW_RTSCTS is tried too)
    If port opening fails, a SerialException is raised on all platforms